--- a/Buoi 12/uiui/pubspec.yaml
+++ b/Buoi 12/uiui/pubspec.yaml
@@ -2,7 +2,7 @@ name: uiui
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.1 <4.0.0'
+  sdk: ">=3.3.1 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -32,8 +32,6 @@ dependencies:
     sdk: flutter
   provider: ^5.0.0
   google_fonts: ^6.2.0
-
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -55,7 +53,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -63,13 +60,14 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/logo1.png
-   - assets/logo2.png
-   - assets/logo2dark.png
-   - assets/logo4.png
-   - assets/logo5.png
-   - assets/logo3.png
-   - assets/logo6.png
+    - assets/logo1.png
+    - assets/logo2.png
+    - assets/logo2dark.png
+    - assets/logo4.png
+    - assets/logo5.png
+    - assets/logo3.png
+    - assets/logo6.png
+    - assets/image 4.png
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
