--- a/Buoi 12/uiui/pubspec.yaml
+++ b/Buoi 12/uiui/pubspec.yaml
@@ -70,7 +70,15 @@ flutter:
    - assets/logo5.png
    - assets/logo3.png
    - assets/logo6.png
-
+   - assets/image8.png
+   - assets/image7.png
+   - assets/50off.png
+   - assets/image9.png
+   - assets/image10.png
+   - assets/image11.png
+   - assets/image12.png
+   - assets/image13.png
+ 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
