--- a/Buoi 12/uitest/pubspec.yaml
+++ b/Buoi 12/uitest/pubspec.yaml
@@ -75,6 +75,9 @@ flutter:
     - assets/image10.png
     - assets/image11.png
     - assets/image12.png
+    - assets/image13-1.png
+    - assets/image13-2.png
+    - assets/image13-3.png
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
